# multithreaded-curl-downloader

./: .clang-tidy  .gitignore  CMakeLists.txt  Readme.md
include/: CurlRequest.h  HeaderWrapper.h  ProgressWrapper.h  ThreadPool.h  curl.h
src/: CMakeLists.txt  CurlRequest.cpp  HeaderWrapper.cpp  ProgressWrapper.cpp  ThreadPool.cpp  main.cpp
